<?xml version="1.0" encoding="utf-8"?>
<resources>

<!-- Strings -->
    <string name="app_name">Shopping List</string>
    <string name="placeholder">Placeholder text</string>
    <string name="action_settings">Settings</string>
    <string name="cover">My Lists</string>
    <string name="no_lists">No lists</string>
    <string name="buttonAdd">+</string>
    <string name="list_icon">List icon</string>
    <string name="catIcon">CategoryIcon</string>
    <string name="button1">List</string>
    <string name="button2">Items</string>

<!-- Colors -->
    <color name="green">#00ff00</color>
    <color name="white">#ffffff</color>
    <color name="black">#555555</color>
    <color name="gray">#bbbbbb</color>
    <color name="lightgray">#DADADC</color>

<!-- Activity titles -->
    <string name="title_activity_show_list">Shopping List Products</string>
    <string name="title_activity_show_categories">Categories</string>
    <string name="title_activity_show_category_items">Category Products</string>

</resources>
